--- a/src/shared/template.ejs
+++ b/src/shared/template.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html class="light">
 	<head>
 		<meta charset="utf-8" />
 		<title><%= htmlWebpackPlugin.options.title %></title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="app"></div>
 		<script type="text/javascript">
 			window.PreactIntegrationLibraries = [<%= libraries.map(JSON.stringify).join(',') %>]
 		</script>
