--- a/src/shared/style/index.scss
+++ b/src/shared/style/index.scss
@@ -182,8 +182,9 @@ code {
 	background: var(--color-page-bg);
 
 	& > main {
+		display: block; // Fix IE11 layout
+		position: relative;
 		min-height: 95%;
 		margin-top: $header-height;
-		display: block; // Fix IE11 layout
 	}
 }
