--- a/src/shared/style/_variables.scss
+++ b/src/shared/style/_variables.scss
@@ -1,7 +1,7 @@
 $header-height: 3.5rem; // 56px
 $header-mobile-breakpoint: 50rem;
 $sidebar-width: 20rem;
-$sidebar-break: "(min-width: 900px)";
+$sidebar-break: '(min-width: 900px)';
 $content-width: 50rem;
 $home-width: 61.5rem;
 $full-width: 80rem;
